Update mvn build for IQ Server/CLI to target Java 8 CLM-9306 CLM-9308 (#2820)