@@ -30,12 +30,12 @@
           <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-eclipse-compiler</artifactId>
-            <version>2.7.0-01</version>
+            <version>2.9.2-01</version>
           </dependency>
           <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-eclipse-batch</artifactId>
-            <version>2.0.6-01</version>
+            <version>2.4.3-01</version>
           </dependency>
         </dependencies>
         <configuration>
@@ -54,7 +54,6 @@
           </includes>
           <systemPropertyVariables>
           </systemPropertyVariables>
-          <argLine>-XX:MaxPermSize=144m</argLine>
         </configuration>
       </plugin>
     </plugins>
