@@ -70,7 +70,6 @@
             <!-- <geb.build.reportsDir>${project.build.directory}/test-reports/geb</geb.build.reportsDir> -->
             <!-- <geb.build.baseUrl>http://localhost:8070/</geb.build.baseUrl> -->
           </systemPropertyVariables>
-          <argLine>-XX:MaxPermSize=144m</argLine>
           <trimStackTrace>false</trimStackTrace>
         </configuration>
       </plugin>
